src/test/deca/context/invalid/class/double-def.deca
// Programme testant la double définition de classes

// Erreur ligne 7

class A {}

class A {}